# cpp_lab_2_engine

./: .gitignore  CMakeLists.txt
include/: ArgSpec.h  Engine.h  ICommand.h  MethodWrapper.h
tests/: EngineTests.cpp
